# plz

./: .gitignore  Cargo.toml  README.md  auto-py-to-exe.json  build.py  plz.py  plz.rs  theliblib.py  update_helper.py
.github/workflows/: rust.yml
src/: main.rs
