[package]
name = "plz"
version = "0.1.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.3", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
serde_derive = "1.0.197"
scraper = "0.19.0"
anstyle = "1.0.6"
serde = "1.0.197"
toml = "0.8.12"
clap = "4.5.4"
